# aleister

./: pyproject.toml
aleister/: wizard.py
aleister/question/: choice.py
