[tool.poetry]
name = "aleister"
version = "0.1.1"
description = "library for CUI wizard"
authors = ["Hirotomo Moriwaki <philopon.dependence@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
prompt_toolkit = {git = "https://github.com/prompt-toolkit/python-prompt-toolkit.git"}
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
